maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:12: error: not found: value predBiscuit
  predBiscuit
  ^